@@ -1,3 +1,11 @@
+2004-04-20  Benjamin Otte  <in7y118@public.uni-hamburg.de>
+
+	* ext/mad/gstid3tag.c: (gst_id3_tag_init):
+	  remove leftover g_print
+	* gst/audioconvert/gstaudioconvert.c: (gst_audio_convert_link):
+	  don't try setting only a subset of the caps. We don't want to kill
+	  autoplugging on purpose
+
 2004-04-20  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* sys/ximage/ximagesink.c: (plugin_init):
